--- a/member-list/index.html
+++ b/member-list/index.html
@@ -4158,6 +4158,92 @@
           </button>
         </div>
       </div>
+            <div class="card" style="--i: 222">
+        <div class="left">
+          <div class="avatar"></div>
+          <span>Wasu Dereck</span>
+        </div>
+        <div class="right">
+          <a href="https://www.facebook.com/kla.gummy" class="btn"
+            >Facebook</a
+          >
+          <button
+            class="btn"
+            onclick="copyText('https://www.facebook.com/kla.gummy')"
+          >
+            คัดลอก
+          </button>
+        </div>
+      </div>
+            <div class="card" style="--i: 223">
+        <div class="left">
+          <div class="avatar"></div>
+          <span>Fix Dereck</span>
+        </div>
+        <div class="right">
+          <a href="https://www.facebook.com/dept.banchamek" class="btn"
+            >Facebook</a
+          >
+          <button
+            class="btn"
+            onclick="copyText('https://www.facebook.com/dept.banchamek')"
+          >
+            คัดลอก
+          </button>
+        </div>
+      </div>
+            <div class="card" style="--i: 224">
+        <div class="left">
+          <div class="avatar"></div>
+          <span>JayJay Dereck</span>
+        </div>
+        <div class="right">
+          <a href="https://www.facebook.com/jack.inyourshxart" class="btn"
+            >Facebook</a
+          >
+          <button
+            class="btn"
+            onclick="copyText('https://www.facebook.com/jack.inyourshxart')"
+          >
+            คัดลอก
+          </button>
+        </div>
+      </div>
+            <div class="card" style="--i: 225">
+        <div class="left">
+          <div class="avatar"></div>
+          <span>Gieow Dereck</span>
+        </div>
+        <div class="right">
+          <a href="https://www.facebook.com/somphor.rixx" class="btn"
+            >Facebook</a
+          >
+          <button
+            class="btn"
+            onclick="copyText('https://www.facebook.com/somphor.rixx')"
+          >
+            คัดลอก
+          </button>
+        </div>
+      </div>
+            <div class="card" style="--i: 226">
+        <div class="left">
+          <div class="avatar"></div>
+          <span>Kiryu Dereck</span>
+        </div>
+        <div class="right">
+          <a href="https://www.facebook.com/kiryu.smit" class="btn"
+            >Facebook</a
+          >
+          <button
+            class="btn"
+            onclick="copyText('https://www.facebook.com/kiryu.smit')"
+          >
+            คัดลอก
+          </button>
+        </div>
+      </div>
+
 
       <!-- คัดลอกรายชื่อและลิงก์แบบนี้ไปเพิ่มตามต้องการ -->
 
